--- a/css/camp_style.css
+++ b/css/camp_style.css
@@ -2,11 +2,11 @@
 code {color: #535353;}
 
 hr {
-  margin-top: -34px;
+  margin-top: -32px;
   margin-bottom: 24px;
 }
 
-2-line {
+two-line {
   margin-top: -26px;
   margin-bottom: 20px;
 }
